--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -29,7 +29,7 @@
 		<nav>
 			<div class="nav-wrapper blue darken-4 white-text">
 				<div class="container">
-					<a href="" class="brand-logo">Crud</a>
+					<a th:href="@{~/}" class="brand-logo">Crud</a>
 				</div>
 			</div>
 		</nav>
